--- a/index.html
+++ b/index.html
@@ -31,9 +31,16 @@
     
     <!-- Meta adicionales -->
     <meta name="description" content="Servicio profesional de mantenimiento de jardines en Tandil. Cuidamos tu césped los 365 días del año." />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+ 
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
 </html>
