--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@
   </body>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
-  AOS.init();
+  AOS.init({ disable: 'mobile' });
 </script>
 </html>
