--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:url" content="https://cesped365.com/" />
     <meta property="og:title" content="Cesped365 - Mantenimiento de Jardines, Tandil" />
     <meta property="og:description" content="Servicio profesional de mantenimiento de jardines en Tandil. Cuidamos tu césped los 365 días del año." />
-    <meta property="og:image" content="https://cesped365.com/logo.png" />
+    <meta property="og:image" content="https://cesped365.com/android-chrome-512x512.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:site_name" content="Cesped365" />
